<resources>
    <string name="general_app_name">BonAppetit</string>
    <string name="general_action_settings">Einstellungen</string>
    <string name="general_action_ok">OK</string>
    <string name="general_action_confirm">Ja</string>
    <string name="general_action_cancel">Abbrechen</string>
    <string name="general_action_yes">Ja</string>
    <string name="general_action_no">Nein</string>
    <string name="general_action_retry">Wiederholen</string>
    <string name="general_action_increment">+</string>
    <string name="general_action_decrement">-</string>
    <string name="general_action_update">Aktualisieren</string>
    <string name="general_toast_cancel_notification">Abgebrochen</string>
    <string name="general_edit_text_hint">Antippen, um Eingabe zu machen</string>
    <string name="general_staff_member_label">Angemeldet: </string>
    <string name="general_customer_label">Kunde:</string>
    <string name="general_placeholder_short">Lorem ipsum</string>
    <string name="general_placeholder_medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, incidunt.</string>
    <string name="general_placeholder_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias cupiditate delectus deleniti doloribus eligendi perspiciatis tenetur vero voluptas voluptatem, voluptatum. Blanditiis commodi dolore hic ipsum maiores nesciunt pariatur porro quae!</string>
    <string name="action_bar_label_take_orders">Bestellen</string>
    <string name="action_bar_label_cash_orders">Kassieren</string>
    <string name="action_bar_label_register">Benutzer wechseln</string>
    <string name="prefs_key_server_host_name">prefs_key_server_host_name</string>
    <string name="prefs_title_server_host_name">Server Hostname / IP</string>
    <string name="prefs_summary_server_host_name">Hostname oder IP-Adresse unter der der BonAppetit-Server
        erreichbar ist</string>
    <string name="prefs_dialog_title_server_host_name">Server Hostname / IP-Adresse</string>
    <string name="prefs_dialog_message_server_host_name">Lege den Server Hostname / IP-Adresse fest</string>
    <string name="prefs_key_server_port">prefs_key_server_port</string>
    <string name="prefs_title_server_port">Server Port</string>
    <string name="prefs_summary_server_port">Port-Nummer unter der der BonAppetit-Server erreichbar ist</string>
    <string name="prefs_dialog_title_server_port">Server Port</string>
    <string name="prefs_dialog_message_server_port">Lege den Server-Port fest</string>
    <string name="prefs_key_server_context_path">prefs_key_server_context_path</string>
    <string name="prefs_title_server_context_path">Server Kontext-Pfad</string>
    <string name="prefs_summary_server_context_path">Kontext-Pfad unter dem der BonAppetit-Server
        erreichbar ist</string>
    <string name="prefs_dialog_title_server_context_path">Server Kontext-Pfad</string>
    <string name="prefs_dialog_message_server_context_path">Lege den Kontext-Pfad des Servers fest</string>
    <string name="prefs_key_username">prefs_key_username</string>
    <string name="prefs_title_username">Benutzername</string>
    <string name="prefs_summary_username">Der Benutzername, mit dem sich die App beim BonAppetit-Server
        authentifiziert.</string>
    <string name="prefs_dialog_title_username">Benutzername</string>
    <string name="prefs_dialog_message_username">Trage einen BonAppetit-Server Benutzernamen ein</string>
    <string name="prefs_key_password">prefs_key_password</string>
    <string name="prefs_title_password">Passwort</string>
    <string name="prefs_summary_password">Das Passwort, mit dem sich die App beim BonAppetit-Server
        authentifiziert</string>
    <string name="prefs_dialog_title_password">Passwort</string>
    <string name="prefs_dialog_message_password">Trage das Passwort, das zu deinem BonAppetit-Server
        Benutzernamen gehört, ein</string>
    <string name="prefs_key_use_test_data">prefs_key_use_test_data</string>
    <string name="prefs_title_use_test_data">Testdaten</string>
    <string name="prefs_summary_use_test_data">App verwendet Testdaten, wenn aktiviert</string>
    <string name="prefs_dialog_title_use_test_data">Testdaten</string>
    <string name="prefs_dialog_message_use_test_data">Lege fest, ob Testdaten verwendet werden sollen (an) oder
        ob echte Daten vom Server geladen werden sollen (aus)</string>
    <string name="prefs_key_show_debug_messages">prefs_key_show_debug_messages</string>
    <string name="prefs_title_show_debug_messages">Debug Nachrichten</string>
    <string name="prefs_summary_show_debug_messages">App zeigt Debug Nachrichten, wenn aktiviert</string>
    <string name="prefs_dialog_title_show_debug_messages">Debug Messages</string>
    <string name="prefs_dialog_message_show_debug_messages">Lege fest, ob Debug Messages angezeigt werden sollen
        (an) oder nicht (aus)</string>
    <string name="prefs_filename_bonappetit">de.bonappetit.prefs_filename_bonappetit</string>
    <string name="prefs_key_customer">prefs_key_customer</string>
    <string name="fragment_main_progress_status">Daten werden geladen …</string>
    <string name="activity_take_orders_title">Bestellen</string>
    <string name="activity_take_orders_button_switch_tab">Zum Tab \"%s\" wechseln</string>
    <string name="fragment_select_customer_action_bar_subtitle">Mitarbeiter auswählen</string>
    <string name="fragment_select_customer_tab_title">Kunde</string>
    <string name="fragment_select_customer_staff_member_customer">Bestellung für Mitarbeiter</string>
    <string name="fragment_select_customer_button_select_staff_member">Mitarbeiter auswählen</string>
    <string name="fragment_select_customer_freetext_label_text">Texteingabe</string>
    <string name="fragment_select_customer_freetext_hint">Tippen, um Kunden einzugeben</string>
    <string name="fragment_select_customer_freetext_confirm_button_text">Texteingabe übernehmen</string>
    <string name="fragment_select_customer_table_select_label_text">Tischauswahl</string>
    <string name="fragment_select_customer_table_select_explanation_text">Tischnummer antippen.</string>
    <string name="fragment_select_customer_table_prefix">Tisch</string>
    <string name="fragment_menu_tab_title">Speisekarte</string>
    <string name="fragment_menu_note">Tippe auf ein Gericht um es hinzuzufügen und wenn du fertig bist auf \"Zusammenfassung anzeigen\" um deine Bestellung abzuschließen und die Bons zu drucken.</string>
    <string name="fragment_menu_button_show_overview">Zusammenfassung anzeigen</string>
    <string name="fragment_menu_inactive_note">Wähle zunächst im Tab \"%s\" aus, für wen du die Bestellung aufnehmen möchtest.</string>
    <string name="fragment_menu_update_failed_note">Daten können nicht geladen werden.\nBitte versuche es erneut.</string>
    <string name="fragment_orders_overview_tab_title">Zusammenfassung</string>
    <string name="fragment_orders_overview_dialog_finish_title">Bestellung abschließen</string>
    <string name="fragment_orders_overview_dialog_finish_safeguard_question">
        <![CDATA[Bist du sicher, dass du diese Bestellung abschließen & drucken möchtest?]]></string>
    <string name="fragment_orders_overview_button_finish">Bestellung abschließen &amp; Bons drucken</string>
    <string name="fragment_orders_overview_dialog_finish_toast_confirm_success">Bons erfolgreich gedruckt</string>
    <string name="fragment_orders_overview_button_edit_order">Bearbeiten</string>
    <string name="fragment_orders_overview_button_delete_order">Löschen</string>
    <string name="fragment_orders_overview_dialog_delete_order_title">Gericht löschen</string>
    <string name="fragment_orders_overview_dialog_delete_order_safeguard_question">
        <![CDATA[Möchtest du diese Bestellung für \"%s\" wirklich löschen?]]></string>
    <string name="fragment_orders_overview_dialog_delete_order_toast_success">Gericht erfolgreich gelöscht</string>
    <string name="fragment_orders_overview_orders_table_column_header_name">Gericht</string>
    <string name="fragment_orders_overview_orders_table_column_header_count">Anzahl</string>
    <string name="fragment_orders_overview_orders_table_column_header_options">Optionen</string>
    <string name="fragment_orders_overview_orders_table_column_header_note">Bemerkung</string>
    <string name="fragment_orders_overview_orders_table_column_header_actions">Aktion</string>
    <string name="fragment_orders_overview_inactive_explanation" formatted="false">
        Wähle bitte zunächst im Tab \"%s\" aus für wen du die Bestellung aufnehmen möchtest und stelle
        sie im Tab \"%s\" zusammen.
    </string>
    <string name="fragment_orders_overview_inactive_button_switch_to_tab">Zum Tab \"%s\" wechseln</string>
    <string name="fragment_orders_overview_active_dialog_finish_failed_title">Bestellung abschließen fehlgeschlagen!</string>
    <string name="fragment_orders_overview_active_dialog_finish_failed_body">
        <![CDATA[Beim Abschließen der Bestellung und dem Drucken der Bons ist ein Fehler aufgetreten: %s.\n\n
        Bitte versuche es noch einmal. Wenn es nicht funktioniert, nimm die Bestellungen bitte per Hand auf und lösche Sie
        hier.]]>
    </string>
    <string name="fragment_orders_overview_active_toast_finish_success">Bestellung erfolgreich abgeschlossen!</string>
    <string name="fragment_orders_overview_dialog_finish_orders_confirmation_title">Bestellungen drucken</string>
    <string name="fragment_orders_overview_dialog_finish_orders_confirmation_message">%d Bestellung(en) werden gedruckt</string>
    <string name="activity_edit_order_item_removed">Eine oder mehrere bestellte Gerichte wurden von der Speisekarte gestrichen. Die Bestellungen wurden gelöscht.</string>
    <string name="activity_edit_order_note_label">Bemerkung</string>
    <string name="activity_edit_order_total_price_label">Gesamtpreis</string>
    <string name="activity_edit_order_count_label">Anzahl</string>
    <string name="activity_edit_order_options_label">Optionen</string>
    <string name="activity_edit_order_count_indicator">x</string>
    <string name="activity_edit_order_create_heading"><![CDATA[Bestellung aufnehmen -]]></string>
    <string name="activity_edit_order_edit_heading"><![CDATA[Bestellung bearbeiten -]]></string>
    <string name="activity_edit_order_action_abort_create">Bestellung verwerfen</string>
    <string name="activity_edit_order_abort_edit">Änderungen verwerfen</string>
    <string name="activity_edit_order_action_confirm_create">Bestellung aufnehmen</string>
    <string name="activity_edit_order_confirm_edit">Bestellung ändern</string>
    <string name="activity_edit_order_toast_cancel_edit">Änderungen verworfen</string>
    <string name="activity_edit_order_toast_cancel_create">Bestellung verworfen</string>
    <string name="activity_edit_order_toast_confirm_edit">Änderungen erfolgreich gespeichert</string>
    <string name="activity_edit_order_toast_confirm_create">Bestellung erfolgreich aufgenommen</string>
</resources>