<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_take_orders"
            android:icon="@drawable/ic_action_take_orders"
            android:title="@string/action_bar_label_take_orders"
            android:showAsAction="always|withText"

            />
    <item
            android:id="@+id/action_cash_orders"
            android:title="@string/action_bar_label_cash_orders"
            android:icon="@drawable/ic_action_cash_orders"
            android:showAsAction="always|withText"

            />

    <item
            android:id="@+id/action_register"
            android:title="@string/action_bar_label_register"
            android:icon="@drawable/ic_social_person"
            android:showAsAction="ifRoom|withText"

            />

    <item
            android:id="@+id/action_settings"
            android:title="@string/general_action_settings"
            android:icon="@drawable/ic_action_settings"
            android:showAsAction="ifRoom|withText"

            />
</menu>