<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fragmentMenuUpdateFailedRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

    <TextView
            android:id="@+id/fragmentMenuUpdateFailedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/fragment_menu_update_failed_note"
            style="@style/TextView.SizeMedium"
            />

    <!--Error Code-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextView.ErrorCode"
            android:text="@string/general_placeholder_short"
            android:id="@+id/fragmentMenuUpdateFailedErrorCode"
            android:layout_below="@+id/fragmentMenuUpdateFailedLabel"
            android:layout_alignEnd="@+id/fragmentMenuUpdateFailedButtonRetry"
            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_action_retry"
            android:id="@+id/fragmentMenuUpdateFailedButtonRetry"
            android:layout_below="@+id/fragmentMenuUpdateFailedErrorCode"
            android:layout_centerHorizontal="true"
            />

</RelativeLayout>