<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
        >

    <!-- Menu Heading -->
    <TextView
            android:id="@+id/fragmentMenuHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_menu_heading"
            style="@style/TextView.Heading.H1"
            />

    <include layout="@layout/general_horizontal_spacer"/>

    <ViewFlipper
            android:id="@+id/fragmentMenuViewFlipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
        <!-- State: ok -->
        <LinearLayout
                android:id="@+id/fragmentMenuActiveRoot"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                >

            <!-- Staff member & Customer -->
            <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    >

                <!-- Staff member -->

                <TableRow>

                    <TextView
                            android:id="@+id/fragmentMenuStaffMemberLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/general_staff_member_label"
                            />

                    <TextView
                            android:id="@+id/fragmentMenuStaffMember"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                </TableRow>

                <!-- Customer -->
                <TableRow>

                    <TextView
                            android:id="@+id/fragmentMenuCustomerLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/general_customer_label"
                            />

                    <TextView
                            android:id="@+id/fragmentMenuCustomer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                </TableRow>
            </TableLayout>

            <include layout="@layout/general_horizontal_spacer"/>

            <!-- Menu Items-->
            <GridView
                    android:id="@+id/fragmentMenuGridViewItems"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="3"
                    android:stretchMode="columnWidth"
                    android:gravity="center"
                    />

            <include layout="@layout/general_horizontal_spacer"/>

            <TextView
                    android:id="@+id/fragmentMenuNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_menu_note"
                    />

            <include layout="@layout/general_horizontal_spacer"/>

            <Button
                    android:id="@+id/fragmentMenuButtonSwitchToOverview"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/fragment_menu_button_show_overview"
                    style="@style/Button.Confirm"

                    />

        </LinearLayout>

        <!-- State: no customer -->
        <LinearLayout
                android:id="@+id/fragmentMenuInactiveRoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <TextView
                    android:id="@+id/fragmentMenuInactiveNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fragment_menu_inactive_note"
                    />

            <include layout="@layout/general_horizontal_spacer"/>

            <Button
                    android:id="@+id/fragmentMenuInactiveButtonSwitchToSelectCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/activity_take_orders_button_switch_tab"
                    />
        </LinearLayout>

        <!-- State: Update in progress-->
        <RelativeLayout
                android:id="@+id/fragmentMenuUpdateInProgressRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            <include layout="@layout/general_progress_view"/>
        </RelativeLayout>

        <!--State: update failed-->
        <RelativeLayout
                android:id="@+id/fragmentMenuUpdateFailedRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            <TextView
                    android:id="@+id/fragmentMenuUpdateFailedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/fragment_menu_update_failed_note"
                    style="@style/TextView.SizeSmall"
                    />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fragmentMenuUpdateFailedLabel"
                    android:layout_centerHorizontal="true"
                    android:text="Wiederholen"
                    />
        </RelativeLayout>
    </ViewFlipper>

</LinearLayout>