<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
        >

    <!--Heading-->
    <TextView
            android:id="@+id/activityEditOrderHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_placeholder_medium"
            style="@style/TextView.Heading.H1"
            />

    <include layout="@layout/general_horizontal_spacer"/>

    <!--Everything below the heading and the spacer is scrollable-->
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <!--Need to add wrapper to content because scroll view can only have exactly one direct child -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <LinearLayout
                    android:id="@+id/activityEditOrderOptionSectionWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <!-- Heading for options-->
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/activityEditOrderOptionsTable"
                        android:text="@string/activity_edit_order_options_label"
                        style="@style/TextView.Heading.H2"
                        />

                <!-- The options as table-->
                <TableLayout
                        android:id="@+id/activityEditOrderOptionsTable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="true"
                        >
                </TableLayout>

                <include layout="@layout/general_horizontal_spacer"/>
            </LinearLayout>

            <!--Note and price as table-->
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <!-- Note -->
                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/activityEditOrderEditTextNote"
                            android:text="@string/activity_edit_order_note_label"
                            android:paddingEnd="20dp"
                            style="@style/TextView.Heading.H2"
                            />

                    <EditText
                            android:id="@+id/activityEditOrderEditTextNote"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text"
                            >
                    </EditText>

                </TableRow>

                <!-- horizontal spacer, direct declaration here, because include wont work  -->
                <!--<View-->
                <!--android:layout_height="@dimen/HorizontalSpacer.Height"-->
                <!--android:layout_marginBottom="@dimen/HorizontalSpacer.MarginBottomTop"-->
                <!--android:layout_marginTop="@dimen/HorizontalSpacer.MarginBottomTop"-->
                <!--android:background="@color/HorizontalSpacer.Background"-->
                <!--/>-->
                <include layout="@layout/general_horizontal_spacer"/>

                <!-- Price -->
                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/activityEditOrderTextViewTotalPrice"
                            android:text="@string/activity_edit_order_total_price_label"
                            android:paddingEnd="20dp"
                            style="@style/TextView.Heading.H2"
                            />

                    <TextView
                            android:id="@+id/activityEditOrderTextViewTotalPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                </TableRow>
            </TableLayout>

            <include layout="@layout/general_horizontal_spacer"/>

            <!-- The Buttons (Discard and Confirm)-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="?android:attr/buttonBarStyle"
                    >

                <!--Discard Button-->
                <Button
                        android:id="@+id/activityEditOrderButtonCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="cancelButtonHandler"
                        android:text="@string/activity_edit_order_action_abort_create"
                        style="@style/Button.Discard"
                        />
                <!--Confirm Button-->
                <Button
                        android:id="@+id/activityEditOrderButtonConfirm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="confirmButtonHandler"
                        android:text="@string/activity_edit_order_action_confirm_create"
                        style="@style/Button.Confirm"
                        />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>